# spell-cards

./: card.py  custom.py  pathbuilder.py  pf2etools.py  pyproject.toml  sources.py  static.py  utils.py
dataclasses/: custom.py
scripts/: get_dnd5e_cards.py  get_dnd5e_item_cards.py  get_pathfinder_cards.py
spellcard_dataclasses/: card.py  common.py  custom.py  dnd5etools.py  dndbeyond.py  pathbuilder.py  pf2etools.py
spellcard_structs/: dnd5etools.py  dndbeyond.py  pathbuilder.py  pf2etools.py
src/: character.py  cli.py  formatting.py  pf2etools.py  records.py
src/dnd5e/: __init__.py  build.py  card.py  script.py
src/pathfinder2e/: __init__.py  build.py  card.py  script.py
src/utils/: __init__.py  _utils.py  static.py
structs/: pathbuilder.py  pf2etools.py
test/test_dataclasses/test_custom/: test_custom.py
utils/: __init__.py  _utils.py  sources.py  static.py
