[tool.poetry]
name = "spell-cards"
version = "0.1.0"
description = "Utilities for making spell cards and action cards"
authors = ["Aminata Tengbe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
