[tool.poetry]
name = "spell-cards"
version = "0.1.0"
description = "Utilities for making spell cards and action cards"
authors = ["Aminata Tengbe"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
titlecase = "^2.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
rpg-cards = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
