[tool.poetry]
name = "spell-cards"
version = "0.1.0"
description = "Utilities for making spell cards and action cards"
authors = ["Aminata Tengbe"]
readme = "README.md"
packages = [{include = "*", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
jsonpath-ng = "^1.7.0"

[virtualenvs]
create = true
in-project = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
rpg-cards = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
